#3587:added the alert page by already redistered favarotie and added english navi link
git-svn-id: https://svn.openpne.jp/svn/OpenPNE3/plugins/opFavoritePlugin/trunk@10638 8bbc783d-d51a-0410-adab-8fa69d43f207

--- a/i18n/messages.ja.xml
+++ b/i18n/messages.ja.xml
@@ -81,6 +81,16 @@
       <source>The blog is none</source>
       <target>Blogがありません</target>
       </trans-unit>
+
+      <trans-unit id="17">
+      <source>Add to favorite</source>
+      <target>お気に入りに追加</target>
+      </trans-unit>
+
+      <trans-unit id="18">
+      <source>%s is already registered to a favorite.</source>
+      <target>%sさんはすでにお気に入りに登録済みです。</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
